# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

cc_library(
    name = "headers",
    srcs = ["coroutine_executor.h"],
    visibility = [
        "//fuzz/host:__pkg__",
    ],
    deps = [
        "//third_party/libco:co",
    ],
)

cc_library(
    name = "coroutine_executor",
    srcs = ["coroutine_executor.cc"],
    hdrs = ["coroutine_executor.h"],
    visibility = [
        "//fuzz/host:__pkg__",
    ],
    deps = [
        ":headers",
        "//executor",
        "//scheduler:fuzzed_scheduler",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

cc_test(
    name = "coroutine_executor_test",
    size = "small",
    srcs = ["coroutine_executor_test.cc"],
    deps = [
        ":coroutine_executor",
        "//executor:executor_test_template",
        "//scheduler:fuzzed_scheduler_test_template",
        "@com_google_googletest//:gtest_main",
    ],
)
