cc_library(
    name = "headers",
    srcs = ["coroutine_executor.h"],
    visibility = [
        "//fuzz/host:__pkg__",
    ],
    deps = [
        "//third_party/libco:co",
    ],
)

cc_library(
    name = "coroutine_executor",
    srcs = ["coroutine_executor.cc"],
    hdrs = ["coroutine_executor.h"],
    visibility = [
        "//fuzz/host:__pkg__",
    ],
    deps = [
        ":headers",
        "//third_party/concurrence/executor",
        "//third_party/concurrence/scheduler:fuzzed_scheduler",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

cc_test(
    name = "coroutine_executor_test",
    size = "small",
    srcs = ["coroutine_executor_test.cc"],
    deps = [
        ":coroutine_executor",
        "//third_party/concurrence/executor:executor_test_template",
        "//third_party/concurrence/scheduler:fuzzed_scheduler_test_template",
        "@com_google_googletest//:gtest_main",
    ],
)
